<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141218"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="30dp"
    tools:context=".FindEscrowActivity">

    <!-- Loading Panel -->
    <LinearLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <!-- Lottie Animation -->
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieLoading"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/plant"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>
    </LinearLayout>

    <!-- Form -->
    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:hintEnabled="true"
            android:hint="@string/engagementId"
            app:hintTextColor="#D0BCFE"
            app:boxStrokeColor="#D0BCFE"
            app:expandedHintEnabled="false"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/engagementIdInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/engagementId"
                android:textColorHint="@color/white"
                android:drawableStart="@drawable/lens_icon"
                android:drawablePadding="10dp"
                android:inputType="text"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:hintEnabled="true"
            android:hint="@string/contractId"
            app:hintTextColor="#D0BCFE"
            app:boxStrokeColor="#D0BCFE"
            app:expandedHintEnabled="false"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contractIdInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contractId"
                android:textColorHint="@color/white"
                android:drawableStart="@drawable/lens_icon"
                android:drawablePadding="10dp"
                android:inputType="text"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/MyButton"
            android:id="@+id/enterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/enterButton"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="50sp" />

        <com.google.android.material.button.MaterialButton
            style="@style/MyButton"
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Disconnect Wallet"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="50sp" />

        <com.google.android.material.button.MaterialButton
            style="@style/MyButton"
            android:id="@+id/checkBalanceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Check Balance"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="50sp" />

        <com.google.android.material.button.MaterialButton
            style="@style/MyButton"
            android:id="@+id/signTransactionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Sign Transaction"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="50sp" />


        <!-- Balance Display -->
        <TextView
            android:id="@+id/balanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="Balance: Not Available"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/statusBanner"
            android:layout_width="343dp"
            android:layout_height="82dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/toast_success"
            android:elevation="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/statusIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:src="@drawable/check" />

            <TextView
                android:id="@+id/statusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/statusIcon"
                android:layout_marginStart="12dp"
                android:layout_centerVertical="true"
                android:text="Connection Successfully"
                android:textSize="17sp"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-medium" />
        </RelativeLayout>

        <com.example.fideicomisoapproverring.transaction.TransactionStatusView
            android:id="@+id/transactionStatusView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/form" />

    </LinearLayout>
</LinearLayout>
